# i18n-audit

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  README_CN.md  USAGE.md  USAGE_CN.md
examples/: run_test.ps1  run_test.sh
examples/mini_test/locales/: zh-CN.yml
examples/mini_test_toml/locales/: en.toml  zh-CN.toml
examples/mini_test_toml/src/: main.rs
examples/mini_test_yml/: Cargo.toml
examples/mini_test_yml/locales/: en.yml
src/: actions.rs  analyzer.rs  config.rs  lib.rs  main.rs  parser.rs  report.rs  scanner.rs
tests/: format_test.rs
