[package]
name = "i18n-audit"
version = "0.1.0"
edition = "2024"
description = "一个用于审计 rust-i18n 项目中未使用的翻译键的工具"
license = "MIT OR Apache-2.0"
authors = ["GlorYouth <gloryouth@gmail.com>"]
repository = "https://github.com/GlorYouth/i18n-audit"
keywords = ["i18n", "rust-i18n", "audit", "linter"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
# 命令行参数解析
clap = { version = "4.4", features = ["derive"] }
# 文件系统操作
walkdir = "2.4"
# 正则表达式
regex = "1.10"
# 错误处理
anyhow = "1.0"
# 日志记录
log = "0.4"
env_logger = "0.11.8"
# YAML解析
serde_yaml = "0.9"
# JSON解析
serde_json = "1.0"
# TOML解析
toml = "0.9.2"
# 序列化/反序列化
serde = { version = "1.0", features = ["derive"] }
# 用于解析Rust代码的库
syn = { version = "2.0", features = ["full", "visit", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
# 彩色输出
colored = "3.0.0"
pathdiff = "0.2.3"
prettytable-rs = "0.10"

[dev-dependencies]
